fix smooth scrolling layout, spacing and responsive sizing

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,7 +3,7 @@
   display: flex;
   position: relative;
   overflow: hidden;
-  height: 80vh;
+  height: 90vh;
 }
 
 .content {
@@ -15,37 +15,40 @@
   color: var(--bg-primary-color);
 }
 
-.paragraph {
-  /* color: #d9d8d7; */
-}
-
 @media (max-width: 688px) {
   .container {
     /* border: solid 1px red; */
-    padding: 0 4.5rem;
-    padding-bottom: 10rem;
+    /* padding: 0 4.5rem; */
+    /* padding-bottom: 10rem; */
+    justify-content: center;
+    align-items: center;
+    padding-left: 30vw;
+    padding-right: 10vw;
+    /* margin: 10vh 0; */
+    /* padding: 2vh 0 0.5vh 20vw; */
   }
 
   .content {
     /* border: solid 1px blue; */
-    display: flex;
     flex-flow: column nowrap;
-    padding: 0;
-    margin: 0;
+    align-items: center;
+    /* margin-right: 0.5rem; */
     gap: 1.5rem;
   }
 
   .title {
-    text-align: center;
-    font-size: 5rem;
+    /* text-align: center; */
+    font-size: 4.5rem;
+    /* margin-top: 8vh; */
   }
 
   .paragraph {
     /* border: solid 1px purple; */
-    line-height: 2.2rem;
-    text-align: center;
-    padding: 0 0 0 0;
-    margin: 0;
+    /* text-align: center; */
+    line-height: 1.5rem;
+    /* text-align: center; */
+    font-size: 1.2rem;
+    margin: 1rem;
   }
 }
 
@@ -83,11 +86,12 @@
 @media (min-width: 993px) {
   .container {
     justify-content: center;
+    /* border: solid 2px red; */
   }
 
   .content {
     /* background-color: aqua; */
-    padding: 5% 0;
+    padding: 5vh 0;
     gap: 2rem;
     max-width: 70vw;
     /* text-align: center;   */
@@ -108,19 +112,16 @@
     /* padding-bottom: 5rem; */
     line-height: 9rem;
     letter-spacing: 0.3rem;
-    font-size: clamp(2.8rem, 5vw, 11rem);
+    font-size: 5rem;
     /* height: 100%; */
   }
 
   .paragraph {
-    padding-top: 0;
-    padding-bottom: 0;
     align-self: center;
     /* padding: 0.5rem 8rem 2.5rem 2rem; */
-    font-size: clamp(1.4rem, 1.5vw, 2.2rem);
+    font-size: clamp(1.2rem, 1.5vw, 2.2rem);
     letter-spacing: 0.2rem;
     line-height: 2.5rem;
     font-weight: 200;
-    /* height: 100%; */
   }
 }
